# terminalai

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUDIOSR_INTEGRATION_SUMMARY.md  AUDIOSR_VERIFICATION.txt  BASIC_ADVANCED_MODE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONTRIBUTING.md  Dockerfile  GUI_COMPREHENSIVE_UX_PLAN.md  GUI_MODEL_DOWNLOAD_UX_IMPROVEMENTS.md  HARDWARE_DETECTION_REPORT.json  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALL_RTX_VIDEO_SDK.md  INTEGRATION_CHECKLIST.md  INTEGRATION_TEST_SUMMARY.txt  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_COMPLETION_REPORT.txt  PERFORMANCE_SUMMARY.md  PYTHON_VERSION_NOTICE.md  README.md  RELEASE_v1.4.4.md  RUST_AUTO_INSTALL_SUMMARY.md  RUST_INSTALLATION_COMPLETE.md  SECURITY.md  SECURITY_FIXES.md  SECURITY_PATCH_SUMMARY.md  SSDAI_Toolsterminalaidiagnostic.json  (+31 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  labeler.yml  performance.yml  python-test.yml  release.yml  security.yml  stale.yml  validate-ci.yml
docs/: ANALYSIS.md  AUDIOSR_INTEGRATION.md  AUDIOSR_QUICKSTART.md  BATCH_PARALLEL.md  BEST_PRACTICES.md  CICD.md  CICD_CHECKLIST.md  CICD_IMPLEMENTATION_SUMMARY.md  CICD_QUICKSTART.md  CI_CD_QC_PLAN.md  CODEFORMER_INTEGRATION.md  COMPARISON_MODULE.md  DEINTERLACE_INTEGRATION.md  DEINTERLACE_QUICKSTART.md  DEINTERLACING.md  DEPENDENCY_AUDIT_REPORT.md  DEPENDENCY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE_INDEX.md  DEPLOYMENT_QUICKREF.md  DOCUMENTATION_AUDIT_REPORT.md  DRY_RUN_MODE.md  FACE_RESTORATION.md  FEATURE_COMPARISON.md  FIRST_RUN_WIZARD.md  GUI_BUG_FIXES_SUMMARY.md  GUI_DESIGN_SPECIFICATION.md  GUI_NEW_FEATURES.md  GUI_QUICK_FIX_GUIDE.md  HARDWARE_DETECTION.md  INDEX.md  LUT_GUIDE.md  PERFORMANCE_OPTIMIZATION_README.md  QUICKSTART_AUDIO.md  QUICKSTART_VHS.md  QUICKSTART_YOUTUBE.md  README.md  RELEASE_V1.5.0_SUMMARY.md  REORGANIZATION_SUMMARY.md  (+16 more)
docs/deployment/: DEPLOYMENT_CHECKLIST.md
docs/development/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CODE_ANALYSIS_SUMMARY.md  DEPENDENCY_FIX_QUICK_REFERENCE.md  DEPENDENCY_FIX_SUMMARY.md  GUI_LAUNCH_TEST_REPORT.md  HARDWARE_DETECTION_FIX.md  HARDWARE_DETECTION_TEST_RESULTS.md  INSTALLATION_VERIFICATION_TEST_REPORT.md  PERFORMANCE_OPTIMIZATIONS_APPLIED.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  QUICK_IMPROVEMENTS.md  QUICK_TEST_INSTRUCTIONS.md  TEST_AUTOMATION_REPORT.md  TEST_COVERAGE_REPORT.md  fix_tests_summary.md
docs/guides/: BASIC_MODE_QUICK_START.md  GUI_BEFORE_AFTER.md  GUI_IMPROVEMENTS.md  GUI_OPTIMIZATION_SUMMARY.md  GUI_STRUCTURE.md  GUI_USER_GUIDE.md  QUICK_START.md  VERIFY_BASIC_MODE.md
docs/installation/: BASICSR_PATCH.md  DEPENDENCY_ANALYSIS.md  INSTALLATION.md  INSTALLATION_SUMMARY.md  INSTALLATION_SYSTEM.md  INSTALLATION_TROUBLESHOOTING.md  INSTALLATION_VERIFICATION_SUMMARY.md  INSTALL_WINDOWS.md  POWERSHELL_UNICODE_FIX.md  QUICK_INSTALL.txt  RTX_SETUP_QUICK_START.txt  RTX_VIDEO_SETUP_GUIDE.md  RUST_AUTO_INSTALLATION.md  RUST_QUICK_REFERENCE.md  SETUP_WIZARD_EXAMPLE.txt  VERIFICATION_GUIDE.md  VERIFICATION_QUICK_REFERENCE.md  WINDOWS_INSTALLATION.md
docs/releases/: CHANGELOG.md  DEPENDENCY_UPDATE_SUMMARY.md  FIRST_RUN_WIZARD_SUMMARY.md  GUI_INTEGRATION_REPORT.md  HARDWARE_DETECTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md
docs/security/: SECURITY.md
examples/: README.md  audio_upmix_workflow.sh  basic_vhs_upscale.py  comparison_testing.sh  vhs_full_pipeline.sh  youtube_batch.sh
luts/: cool_modern.cube  vhs_restore.cube  warm_vintage.cube
models/: README.md
scripts/: README.md  apply_basic_mode_patch.py  generate_hardware_report.py  generate_luts.py  manual_cli_integration_test.py  run_all_tests.py  setup_maxine.py  setup_rtx_video.py  verify_dependencies.py  verify_setup.py  video_analyzer.sh  watch_folder.py  watch_folder_config.yaml
scripts/installation/: install.bat  install.ps1  install.py  install_windows.ps1  install_windows.py  one_shot_install.sh  patch_basicsr.py  verify_basicsr_patch.py  verify_installation.py  verify_setup.py
scripts/utils/: analyze_performance.py  optimization_plan.json  optimization_plan.txt  performance_patches.py  performance_profiler.py
src/: cli.ts  index.ts
src/cli/: commands.ts  index.ts  interactive.ts
src/config/: index.ts
src/core/: assistant.ts  index.ts  processor.ts
src/types/: index.ts
src/utils/: formatters.ts  index.ts  logger.ts  validators.ts
tests/: INTEGRATION_TEST_RESULTS.md  README.md  TEST_SUITE_SUMMARY.md  TEST_SUMMARY.md  __init__.py  conftest.py  setup.ts  test_api_usage.py  test_audio_processor_audiosr.py  test_audio_processor_deepfilternet.py  test_batch_parallel.py  test_cli_options.py  test_comparison.py  test_comprehensive_hardware_detection.py  test_deinterlace.py  test_deinterlace_integration.py  test_dry_run.py  test_face_restoration.py  test_first_run_wizard.py  test_gpu_scenarios.py  test_gui_fixes.py  test_gui_hardware_detection.py  test_gui_helpers.py  test_gui_integration.py  test_gui_launch.py  test_gui_startup.py  test_hardware_detection_fix.py  test_installation_verification.py  test_installer.py  test_integration_check.py  test_notifications.py  test_performance_validation.py  test_queue_manager.py  test_rtx_video_sdk.py  test_security_fixes.py  test_security_shell_injection.py  test_watch_folder.py
tests/e2e/: cli.test.ts  workflow.test.ts
vhs_upscaler/: README.md  __init__.py  __main__.py  audio_processor.py  comparison.py  config.yaml  deinterlace.py  dry_run.py  face_restoration.py  first_run_wizard.py  gui.py  hardware_detection.py  install.ps1  logger.py  notifications.py  presets.py  queue_manager.py  requirements.txt  setup_rtx.py  vhs_upscale.py
(+35 files in other folders)
