[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalai"
version = "1.4.4"
description = "AI-powered video processing suite with YouTube downloading, VHS upscaling, audio enhancement, and surround sound upmixing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TerminalAI Contributors"}
]
keywords = [
    "video-upscaling",
    "vhs-restoration",
    "ai-video-enhancement",
    "nvidia-maxine",
    "rtx-video-super-resolution",
    "youtube-downloader",
    "video-upscaler",
    "480p-to-1080p",
    "480p-to-4k",
    "deinterlace",
    "denoise",
    "nvenc-encoding",
    "batch-video-processing",
    "gradio-gui",
    "analog-video-digitization",
    "vintage-video-restoration",
    "ffmpeg",
    "gpu-acceleration",
    "real-esrgan",
    "audio-enhancement",
    "surround-sound",
    "demucs",
    "hdr10",
    "hlg",
    "5.1-surround",
    "noise-reduction",
    "audio-upmix"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "yt-dlp>=2023.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
# Optional: AI audio separation for best-quality surround upmix
audio = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
# Full installation with all optional features
full = [
    "demucs>=4.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/parthalon025/terminalai"
Documentation = "https://github.com/parthalon025/terminalai#readme"
Repository = "https://github.com/parthalon025/terminalai.git"
Issues = "https://github.com/parthalon025/terminalai/issues"

[project.scripts]
terminalai-gui = "vhs_upscaler.gui:main"
vhs-upscale = "vhs_upscaler.vhs_upscale:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vhs_upscaler*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "E722"]  # Allow bare except for simple error handling

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "venv", "env", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True (used safely)

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["vhs_upscaler"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.coverage.run]
source = ["vhs_upscaler"]
omit = ["tests/*", "venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
