[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalai"
version = "1.5.1"
description = "AI-powered video processing suite with YouTube downloading, VHS upscaling, RTX Video SDK, AI audio enhancement (DeepFilterNet/AudioSR), CodeFormer face restoration, and surround sound upmixing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
authors = [
    {name = "TerminalAI Contributors"}
]
keywords = [
    "video-upscaling",
    "vhs-restoration",
    "ai-video-enhancement",
    "rtx-video-sdk",
    "rtx-video-super-resolution",
    "nvidia-rtx",
    "youtube-downloader",
    "video-upscaler",
    "480p-to-1080p",
    "480p-to-4k",
    "deinterlace",
    "denoise",
    "nvenc-encoding",
    "batch-video-processing",
    "gradio-gui",
    "analog-video-digitization",
    "vintage-video-restoration",
    "ffmpeg",
    "gpu-acceleration",
    "real-esrgan",
    "audio-enhancement",
    "surround-sound",
    "demucs",
    "hdr10",
    "hlg",
    "5.1-surround",
    "noise-reduction",
    "audio-upmix"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    # Core dependencies
    "yt-dlp>=2023.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0,<7.0",  # Pin to stable 6.x, avoid breaking changes

    # AI Processing (PyTorch) - Required for audio and face restoration
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0,<3.0",  # Critical: Must be <2.0 for AI package compatibility

    # Video Processing - Required for all features
    "opencv-python>=4.8.0",

    # Automation - Required
    "watchdog>=3.0.0",

    # Notifications - Required
    "requests>=2.28.0",

    # GPU Detection (nvidia-ml-py replaces deprecated pynvml)
    "nvidia-ml-py>=12.0.0",

    # AI Audio Features - Made optional due to dependency conflicts
    # Install with: pip install -e ".[audio]"
    # "demucs>=4.0.0",
    # "deepfilternet>=0.5.0",
    # "audiosr>=0.0.4",

    # Face Restoration - Made optional for better compatibility
    # Install with: pip install -e ".[face]"
    # "gfpgan>=1.3.0",
    # "basicsr>=1.4.2",
    # "facexlib>=0.2.5",

    # Real-ESRGAN AI Upscaling - Made optional
    # Install with: pip install -e ".[upscaling]"
    # "realesrgan>=0.3.0",
]

# IMPORTANT - Python 3.12 Compatibility Notes:
# ============================================
# For Python 3.12, use these verified compatible versions:
# - PyTorch 2.2.2+ (earlier versions don't support Python 3.12)
# - numpy==1.26.4 (NOT 2.x - causes compatibility issues)
# - basicsr requires manual patch for torchvision >= 0.17
#
# Install command for Python 3.12:
#   py -3.12 -m pip install torch==2.2.2 torchvision==0.17.2 torchaudio==2.2.2 --index-url https://download.pytorch.org/whl/cu121
#   py -3.12 -m pip install "numpy<2"
#   py -3.12 -m pip install -e ".[full]"
#
# basicsr patch (required for torchvision >= 0.17):
#   Edit: site-packages/basicsr/data/degradations.py line 8
#   Replace: from torchvision.transforms.functional_tensor import rgb_to_grayscale
#   With:
#     try:
#         from torchvision.transforms.functional import rgb_to_grayscale
#     except ImportError:
#         from torchvision.transforms.functional_tensor import rgb_to_grayscale

[project.optional-dependencies]
# Development tools (testing, linting, formatting)
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
# CUDA acceleration for faster processing (optional, requires CUDA 12.1+)
cuda = [
    "cupy-cuda12x>=12.0.0",
]
# Development + CUDA
dev-cuda = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "cupy-cuda12x>=12.0.0",
]
# AI features (may have compatibility issues with Python 3.13+)
audio = [
    "demucs>=4.0.0",
    "deepfilternet>=0.5.0",
]
face = [
    "gfpgan>=1.3.0",
    "facexlib>=0.2.5",
]
upscaling = [
    "realesrgan>=0.3.0",
]
# Full AI features (all optional features except deepfilternet which requires Rust)
full = [
    "demucs>=4.0.0",
    # "deepfilternet>=0.5.0",  # Requires Rust compiler - install manually if needed
    "gfpgan>=1.3.0",
    "facexlib>=0.2.5",
    "realesrgan>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/parthalon025/terminalai"
Documentation = "https://github.com/parthalon025/terminalai#readme"
Repository = "https://github.com/parthalon025/terminalai.git"
Issues = "https://github.com/parthalon025/terminalai/issues"

[project.scripts]
terminalai-gui = "vhs_upscaler.gui:main"
vhs-upscale = "vhs_upscaler.vhs_upscale:main"
terminalai-setup-rtx = "vhs_upscaler.setup_rtx:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vhs_upscaler*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "E722"]  # Allow bare except for simple error handling

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests", "venv", "env", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True (used safely)

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["vhs_upscaler"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.coverage.run]
source = ["vhs_upscaler"]
omit = ["tests/*", "venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
